# SimpleImageSearch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/src/: main.py
apps/backend/src/api/: dependencies.py  middleware.py
apps/backend/src/api/routes/: __init__.py  batches.py  health.py  images.py  items.py
apps/backend/src/application/dto/: __init__.py  batch.py  image.py  item.py
apps/backend/src/application/services/: __init__.py  batch_processor.py  file_storage.py  image_downloader.py
apps/backend/src/domain/entities/: __init__.py  batch.py  batch_item.py  image_asset.py  processing_log.py
apps/backend/src/domain/interfaces/: __init__.py  search_provider.py  storage_provider.py
apps/backend/src/domain/value_objects/: __init__.py  query.py  status.py
apps/backend/src/infrastructure/config/: settings.py
apps/backend/src/infrastructure/database/: __init__.py  models.py  repositories.py  session.py
apps/backend/src/infrastructure/providers/: __init__.py  brave_search.py  google_custom_search.py  local_storage.py  serpapi_search.py
apps/frontend/: index.html  nginx.conf  package-lock.json  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/api/: batches.ts  client.ts  items.ts
apps/frontend/src/hooks/: useBatchItems.ts  useBatches.ts  usePolling.ts
apps/frontend/src/pages/: BatchDetailPage.tsx  BatchImportPage.tsx  BatchListPage.tsx
apps/frontend/src/stores/: uiStore.ts
(+13 files in other folders)
